@@ -11,6 +11,7 @@ export(ph_with_vg_at)
 export(rvg_tracer_off)
 export(rvg_tracer_on)
 export(set_attr)
+export(xl_add_vg)
 import(grDevices)
 import(graphics)
 importFrom(Rcpp,sourceCpp)
@@ -22,7 +23,11 @@ importFrom(officer,ph_from_xml_at)
 importFrom(officer,wml_link_images)
 importFrom(utils,compareVersion)
 importFrom(utils,packageDescription)
+importFrom(xml2,"xml_attr<-")
 importFrom(xml2,as_xml_document)
 importFrom(xml2,read_xml)
+importFrom(xml2,xml_add_sibling)
 importFrom(xml2,xml_find_first)
+importFrom(xml2,xml_new_root)
+importFrom(xml2,xml_ns)
 useDynLib(rvg,.registration = TRUE)
